# navix-autonomous-car

./: README.md
Navix/: CMakeLists.txt  README.md
Navix/app/: Navix.c
Navix/html/: md__r_e_a_d_m_e.html  pages.html
Navix/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
Navix/latex/: md__r_e_a_d_m_e.tex
Navix/test/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h  main.c
Navix/test/gps/: CMakeLists.txt  gps.c  gps.h  main.c
Navix/test/gy511/: CMakeLists.txt  gy511.c  gy511.h  main.c
Navix/test/motores/: CMakeLists.txt  main.c  motores.c  motores.h
Navix/test/motores_gps/: CMakeLists.txt  main.c
Navix/test/motores_gps_sim/: CMakeLists.txt  main.c
Navix/test/motores_radar_servo/: CMakeLists.txt  core1_logic.c  core1_logic.h  main_navix.c  robot_defs.h
Navix/test/navegacion_gps_gy511/: CMakeLists.txt  main.c
Navix/test/radar/: CMakeLists.txt  main.c  radar.c  radar.h
Navix/test/servo/: CMakeLists.txt  main.c  servo.c  servo.h
Navix/test/servo_radar/: CMakeLists.txt  main.c
